@@ -1,10 +1,7 @@
 package work.lclpnet.lobby.game.map;
 
 import java.io.IOException;
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.Collection;
 import java.util.Optional;
 
@@ -22,12 +19,10 @@ public interface MapRepository {
         }
 
         try {
-            URL url = new URL(source);
+            URI uri = URI.create(source);
 
-            return Optional.of(url.toURI());
-        } catch (URISyntaxException e) {
-            return Optional.empty();
-        } catch (MalformedURLException ignored) {}
+            return Optional.of(uri);
+        } catch (IllegalArgumentException ignored) {}
 
         var uri = info.uri().resolve(source.replace('\\', '/'));
 
